@@ -980,20 +980,24 @@ module Bud
 
     public
     # project to the non-address fields
-    def payloads
-      return self.pro if @is_loopback
+    def payloads(&blk)
+      return self.pro(&blk) if @is_loopback
 
       if cols.size > 2
-        # bundle up each tuple's non-locspec fields into an array
-        retval = case @locspec_idx
-          when 0 then self.pro{|t| t.values_at(1..(t.size-1))}
-          when (schema.size - 1) then self.pro{|t| t.values_at(0..(t.size-2))}
-          else self.pro{|t| t.values_at(0..(@locspec_idx-1), @locspec_idx+1..(t.size-1))}
+        if @payload_struct.nil?
+          payload_cols = cols.dup
+          payload_cols.delete_at(@locspec_idx)
+          @payload_struct = Struct.new(*payload_cols)
+          @payload_colnums = payload_cols.map {|k| cols.index(k)}
+        end
+        retval = self.pro do |t|
+          @payload_struct.new(*t.values_at(*@payload_colnums))
         end
       else
         # just return each tuple's non-locspec field value
         retval = self.pro{|t| t[(@locspec_idx == 0) ? 1 : 0]}
       end
+      retval = retval.pro(&blk) unless blk.nil?
       return retval
     end
 
