@@ -447,8 +447,17 @@ class AttrNameRewriter < SexpProcessor # :nodoc: all
 
       # now find iter vars and match up
       if exp[2] and exp[2][0] == :lasgn and @collnames.size == 1 #single-table iter
-        raise Bud::CompileError, "nested redefinition of block variable \"#{exp[2][1]}\" not allowed" if @iterhash[exp[2][1]]
-        @iterhash[exp[2][1]] = @collnames[0]
+        if @iterhash[exp[2][1]]
+          raise Bud::CompileError, "nested redefinition of block variable \"#{exp[2][1]}\" not allowed"
+        end
+
+        # XXX: The BudChannel#payloads method assigns the correct schema to
+        # tuples that pass through it (i.e., it omits the location specifier);
+        # hence we don't want to apply the location rewrite to the code block
+        # that is passed to payloads(). This is a dirty hack.
+        unless exp[1][2] == :payloads
+          @iterhash[exp[2][1]] = @collnames[0]
+        end
       elsif exp[2] and exp[2][0] == :lasgn and @collnames.size > 1 and exp[1] # join iter with lefts/rights
         case exp[1][2]
         when :lefts
